--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_svg: ^2.1.0
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/logo.svg
+    - assets/icons/
