--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: flutter_todo_app
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: 'none' # Remove this line if you want to publish to pub.dev
 version: 0.1.0
 
 environment:
-  sdk: ^3.8.0-265.0.dev
+  sdk: "^3.8.0-265.0.dev"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +18,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
