--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none' # Remove this line if you want to publish to pub.dev
 version: 0.1.0
 
 environment:
-  sdk: "^3.8.0-265.0.dev"
+  sdk: ">=3.3.4 <4.0.0"
 
 dependencies:
   flutter:
