--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.1.0
+  table_calendar: ^3.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
