feat(save): create feat/save

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,12 @@ environment:
  sdk: ">=3.3.4 <4.0.0"
 
 dependencies:
+  sqflite: ^2.3.0
+  path_provider: ^2.1.0
   flutter:
     sdk: flutter
+  sqflite_common_ffi: ^2.3.0+1
+  path: ^1.8.3
   flutter_svg: ^2.1.0
   table_calendar: ^3.2.0
 dev_dependencies:
