--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
     sdk: flutter
   sqflite_common_ffi: ^2.3.0+1
   path: ^1.8.3
-  flutter_svg: ^2.1.0
+  crypto: ^3.0.3
+  flutter_svg: ^2.0.10+1
   table_calendar: ^3.2.0
 dev_dependencies:
   flutter_test:
