--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_todo_app
 description: "A new Flutter project."
-publish_to: 'none' # Remove this line if you want to publish to pub.dev
+publish_to: 'none' 
 version: 0.1.0
 
 environment:
- sdk: ">=3.3.4 <4.0.0"
+  sdk: ">=3.3.4 <4.0.0"
 
 dependencies:
   sqflite: ^2.3.0
@@ -16,11 +16,11 @@ dependencies:
   crypto: ^3.0.3
   flutter_svg: ^2.0.10+1
   table_calendar: ^3.2.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
- 
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
